[package]
name = "userinput"
version = "0.1.2"
authors = ["carnot-engine <ghost_shell@tutanota.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "library for checking userinput errors"
repository = "https://github.com/carnot-engine/userinput.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
